--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta charset="UTF-8">
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         <title>Meltwich Landing page</title>
-        <!-- <script defer src = "https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/menu_bar_styles.css">
         <link rel="stylesheet" href="css/home_styles.css">        
+        <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script defer type="text/javascript" src = "js/menu_bar_script.js"></script> 
-        <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script defer type = "text/javascript" src = "js/reviews_script.js"></script>
     </head>
 
     <body>
@@ -22,8 +22,8 @@
             <h1 class = "title">Meltwich</h1>
             <p>The best borgars ever!!</p>
             <div class = "social-media-buttons">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <i onclick = "location.href = 'https://www.facebook.com/meltwich/'" class="fa fa-facebook" aria-hidden="true"></i>
+                <i onclick = "location.href = 'https://twitter.com/Meltwichfoodco' "class="fa fa-twitter" aria-hidden="true"></i>
             </div>
         </header>
         <br><br><br>
@@ -59,7 +59,7 @@
                 <br>
                 <h3>the bestest grilled cheese</h3>
                 <br>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae nobis harum accusamus modi totam amet, assumenda distinctio a nostrum excepturi tenetur dolor. Architecto vitae ut adipisci odio facilis dolore quibusdam.</p>
+                <p>Lorem ipsum dolor, sit amet conseusamus modi totam amet, assumenda distinctio a nostrum excepturi tenetur dolor. Architecto vitae ut adipisci odio facilis dolore quibusdam.</p>
                 <br>
                 <button>Read more</button>
             </div>
