--- a/under_construction.html
+++ b/under_construction.html
@@ -4,25 +4,20 @@
         <meta name="description" content="Meltwich Menu">
         <meta charset="UTF-8">
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-        <title>Meltwich Menu</title>
+        <title>Under Construction</title>
         <link rel="stylesheet" href="css/menu_bar_styles.css"> 
         <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/menu_styles.css">
+        <link rel="stylesheet" href="css/under_construction_styles.css">
         <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script defer type="text/javascript" src = "js/menu_bar_script.js"></script>
-        <script defer type = "text/javascript" src = "js/menu_script.js"></script>
     </head>
 
     <body>
-        <div class="menu-bar" id="menu-bar"></div>
-        <div class="wrapper">
-            <!-- the  menu container -->
-            <div class = "menu-container" id = "menu-container">
-                <h1>Sample Meltwich Menu</h1>
-                <hr><br><br><br><br>
-                <!-- where the actual items go done by the javascript currently-->
-            </div>
+        <div class="menu-bar" id = "menu-bar"></div>
+
+        <div class = "construction-container">
+            <i class = "fa fa-wrench"></i>
+            <p>UNDER CONSTRUCTION</p>
         </div>
     </body>
-    
 </html>
